# D_Engine

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_auth_schema.py  0002_data_sources_and_datasets.py  0003_llm_credentials.py  0004_agent_conversations.py  0005_agent_message_suggestions.py  0006_execution_engine.py  0007_agent_messages_update_policy.py
backend/app/: config.py  logging_config.py  main.py
backend/app/agent/: __init__.py  clients.py  models.py  routes.py  schemas.py  service.py  tools.py
backend/app/auth/: audit.py  cookies.py  dependencies.py  email.py  error_mapping.py  errors.py  mfa_service.py  models.py  passwords.py  recovery_codes.py  routes.py  schemas.py  service.py  sso.py  totp.py
backend/app/core/: encryption.py  rate_limit.py  security.py  tokens.py
backend/app/data/: deps.py  errors.py  models.py  profiling.py  routes.py  schemas.py  service.py  storage.py
backend/app/data/parsers/: __init__.py  common.py  csv_parser.py  parquet_parser.py  xlsx_parser.py
backend/app/data/probes/: __init__.py  mssql.py  postgres.py
backend/app/db/: base.py  rls.py  session.py
backend/app/llm/: __init__.py  models.py  providers.py  routes.py  schemas.py  service.py
backend/app/middleware/: security_headers.py
backend/app/transforms/: __init__.py  dispatcher.py  models.py  routes.py  service.py  types.py
backend/app/transforms/ops/: __init__.py  dedupe.py  fillna.py  inspect.py  normalize_numeric.py  normalize_text.py  parse_dates.py
backend/app/utils/: slug.py
backend/scripts/: init-app-role.sql
backend/tests/: conftest.py  factories.py  test_agent_conversations_rls.py  test_agent_loop_e2e.py  test_audit.py  test_data_endpoints_e2e.py  test_data_models_rls.py  test_email.py  test_encryption.py  test_endpoints_e2e.py  test_llm_credentials_rls.py  test_models_rls.py  test_passwords.py  test_security.py  test_service_register.py  test_tokens.py  test_totp.py
docs/: architecture.md  security.md
frontend/: .prettierignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/conversations/[id]/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/datasets/: page.tsx
frontend/src/app/(app)/datasets/[id]/: page.tsx
frontend/src/app/(app)/datasets/upload/: page.tsx
frontend/src/app/(app)/settings/ai/: page.tsx
frontend/src/app/(app)/settings/security/: page.tsx
frontend/src/app/(app)/sources/[id]/tables/: page.tsx
frontend/src/app/(app)/sources/new/: page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/forgot-password/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/login/mfa/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(auth)/reset-password/: page.tsx
frontend/src/app/(auth)/verify-email/: page.tsx
frontend/src/components/: auth-hero.tsx  brand-logo.tsx  locale-toggle.tsx  query-provider.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/components/agent/: agent-next-step.tsx  clean-data-panel.tsx  conversations-section.tsx  message-markdown.tsx  message-visuals.tsx  start-conversation-dialog.tsx
frontend/src/components/auth/: auth-globe.tsx  auth-page-header.tsx  compliance-badges.tsx  forgot-password-form.tsx  login-form.tsx  mfa-form.tsx  mini-globe.tsx  register-form.tsx  reset-password-form.tsx  right-panel.tsx  sso-buttons.tsx  status-badge.tsx  verify-email-flow.tsx
frontend/src/components/datasets/: profile-section.tsx  share-section.tsx
frontend/src/components/layout/: sidebar.tsx  topbar.tsx
frontend/src/components/llm/: edit-credential-dialog.tsx  grants-dialog.tsx  new-credential-dialog.tsx  provider-icon.tsx
frontend/src/components/settings/: disable-mfa-dialog.tsx  mfa-setup-card.tsx  recovery-codes-dialog.tsx  sessions-table.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: use-current-user.ts
frontend/src/lib/: agent-actions.ts  api.ts  auth-actions.ts  auth-schemas.ts  data-actions.ts  llm-actions.ts  working-copy-actions.ts
frontend/src/lib/i18n/: dictionaries.ts  provider.tsx
frontend/src/types/: agent.ts  auth.ts  data.ts  llm.ts  working-copy.ts
frontend/tests/: api.test.ts  login-form.test.tsx  register-form.test.tsx
