[project]
name = "dataprep"
version = "0.1.0"
description = "Multi-tenant data preparation platform — backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "fastapi-users[sqlalchemy]>=14.0",
    "authlib>=1.3",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # Spec asked for passlib, but passlib 1.7.4 (latest, 2020) is
    # incompatible with bcrypt >=4.1, and fastapi-users transitively requires
    # bcrypt >=4.1.2 via pwdlib. Rather than fight the resolver we adopt the
    # same wrapper fastapi-users uses. pwdlib is a thin, actively-maintained
    # bcrypt/argon2 wrapper — it satisfies "no hand-rolled crypto" and keeps
    # us at one password library instead of two in conflict.
    "pwdlib[bcrypt]>=0.2",
    "python-jose[cryptography]>=3.3",
    "cryptography>=43",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "slowapi>=0.1.9",
    "httpx>=0.27",
    "zxcvbn>=4.4.28",
    "polars>=1.40.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-python-jose",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ----------------------------------------------------------------------------
# Ruff
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["app", "tests"]

[tool.ruff.lint]
# Sensible defaults plus a few useful rule sets:
#   E/W   pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade,
#   S     bandit (security), N pep8-naming, C4 comprehensions,
#   SIM   simplify, TCH type-checking, RUF ruff-specific
select = ["E", "W", "F", "I", "B", "UP", "S", "N", "C4", "SIM", "TCH", "RUF"]
ignore = [
    "E501",   # line length is enforced by formatter
    "B008",   # FastAPI's Depends() pattern relies on calls in defaults
    # Pydantic v2 / SQLAlchemy 2 / FastAPI all evaluate field annotations
    # at runtime — moving the imports to TYPE_CHECKING breaks them.
    "TC001",  # application typing imports
    "TC002",  # third-party typing imports
    "TC003",  # standard-library typing imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]   # asserts and dummy passwords are fine in tests
"alembic/**" = ["E402", "F401"]         # alembic env imports work post-config

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------------------------------------------
# Mypy — strict globally; the user requested at-least-strict for app.auth.*
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

# Third-party libraries without published type stubs.
[[tool.mypy.overrides]]
module = [
    "authlib.*",
    "pwdlib.*",
    "pyotp.*",
    "qrcode.*",
    "slowapi.*",
    "zxcvbn.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Share a single event loop across the whole test session so the
# session-scoped engine fixture can be reused by per-test fixtures.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib.*",
    # slowapi 0.1.x calls asyncio.iscoroutinefunction which 3.14 deprecates.
    "ignore::DeprecationWarning:slowapi.*",
    # asyncpg also has a few deprecations on 3.14 we don't control.
    "ignore::DeprecationWarning:asyncpg.*",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

# ----------------------------------------------------------------------------
# Coverage
# ----------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
